Mapeo de Clase Venta y Venta Producto y mejoras en las vistas
Mapee las clases Venta y Venta Producto y trabaje en las vistas de home y productos

--- a/web/home.xhtml
+++ b/web/home.xhtml
@@ -1,10 +1,12 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE composition PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <ui:composition xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-                template="./templates/PrincipalTemplate.xhtml">
+                template="./WEB-INF/templates/principalTemplate.xhtml"
+                xmlns:p="http://primefaces.org/ui">
 
     <ui:define name="content">
-        content
+        <p:galleria value="#{productoForm.images}" var="image" panelWidth="1330" panelHeight="400" showCaption="true">
+            <p:graphicImage name="images/#{image}" alt="Image Description for #{image}" title="#{image}"/>
+        </p:galleria>
     </ui:define>
-
 </ui:composition>
