--- a/web/login.xhtml
+++ b/web/login.xhtml
@@ -37,6 +37,7 @@
                             <p:outputLabel value="Eres nuevo?"/>
                             <p:commandLink value="Nuevo Usuario"/>
                         </p:panelGrid>
+                    </p:panel>
                 </div>
             </h:form>
 
