--- a/web/carrito.xhtml
+++ b/web/carrito.xhtml
@@ -13,7 +13,7 @@
                 Carrito de Compras
             </p:panel>
             <!--Productos Agregados al carrito de Compras-->
-            <p:dataTable var="pro" value="#{ventaFormBean.listaDeVentasProductos}"
+            <p:dataTable var="pro" value="#{ventaFormBean}"
                          >
                 <f:facet name="header">
                     PRODUCTOS
